# mazessh

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
crates/maze-agent-protocol/: Cargo.toml
crates/maze-agent-protocol/src/: codec.rs  error.rs  lib.rs  message.rs
crates/maze-crypto/: Cargo.toml
crates/maze-crypto/src/: error.rs  lib.rs
crates/maze-vault/: Cargo.toml
crates/maze-vault/src/: error.rs  lib.rs  types.rs  vault.rs
docs/: CLI.md  SECURITY_AUDIT.md  SECURITY_AUDIT_v2.md  USER_GUIDE.md
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: consent.json  default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: advanced.rs  bridge.rs  git.rs  git_identity.rs  hooks.rs  mod.rs  profiles.rs  repo_detection.rs  repo_mappings.rs  scanner.rs  security.rs  ssh_config.rs  switch.rs  vault.rs
src-tauri/src/models/: bridge.rs  bridge_provider.rs  log_entry.rs  mod.rs  profile.rs  repo_mapping.rs  security.rs  vault.rs
src-tauri/src/services/: agent_service.rs  audit_service.rs  bridge_history_service.rs  bridge_service.rs  config_engine.rs  git_identity_service.rs  key_scanner.rs  lock_service.rs  migration_service.rs  mod.rs  policy_service.rs  profile_service.rs  provider_health.rs  relay_bundler.rs  repo_detection_service.rs  repo_mapping_service.rs  security.rs  session_service.rs  settings_service.rs  ssh_engine.rs  validation.rs  wsl_service.rs
src/components/consent/: ConsentPopup.tsx
src/components/layout/: BottomBar.tsx  MainPanel.tsx  Sidebar.tsx  TitleBar.tsx  TopBar.tsx
src/components/logs/: ActivityLog.tsx
src/components/migration/: MigrationWizard.tsx
src/components/profiles/: ProfileCard.tsx  ProfileDetail.tsx  ProfileForm.tsx  ProfileList.tsx  ProviderIcon.tsx
src/components/repos/: AddRepoMappingDialog.tsx  RepoMappingCard.tsx  RepoMappingList.tsx
src/components/security/: LockScreen.tsx
src/components/settings/: AgentModeSettings.tsx  AuditLogViewer.tsx  DiagnosticsPanel.tsx  PolicyRulesPanel.tsx  ProviderSelector.tsx  SecuritySettings.tsx  WslBridgeSettings.tsx
src/components/ssh-config/: ConfigPreview.tsx
src/components/switch/: ActiveBadge.tsx  QuickSwitch.tsx
src/components/ui/: ConfirmDialog.tsx  ErrorBoundary.tsx
src/components/vault/: GenerateKeyDialog.tsx  ImportKeyDialog.tsx  KeyCard.tsx  KeyDetailSheet.tsx  KeyVaultList.tsx  VaultPassphraseChange.tsx  VaultSetupPrompt.tsx  VaultUnlockPrompt.tsx
src/hooks/: useConfirm.ts  useInactivityTracker.ts  useKeyboardShortcuts.ts
src/lib/: tauri-commands.ts
src/stores/: appStore.ts  bridgeStore.ts  logStore.ts  profileStore.ts  repoMappingStore.ts  securityStore.ts  themeStore.ts  uiStore.ts  vaultStore.ts
src/types/: index.ts
