[workspace]
members = [
    "src-tauri",
    "crates/maze-crypto",
    "crates/maze-vault",
    "crates/maze-agent-protocol",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption", "getrandom"] }
