[package]
name = "maze-ssh"
version = "1.1.0"
description = "SSH Identity Orchestrator for Git Workflows"
authors = ["khanhnd"]
edition = "2021"
default-run = "maze-ssh"

[lib]
name = "maze_ssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "maze-ssh-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
maze-crypto = { path = "../crates/maze-crypto" }
maze-vault = { path = "../crates/maze-vault" }
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = "6"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
chrono = { workspace = true }
thiserror = { workspace = true }
keyring = { version = "3", features = ["windows-native"] }
dunce = "1"
argon2 = { workspace = true }
rand = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
zeroize = { workspace = true }
base64 = { workspace = true }

[features]
default = ["desktop"]
desktop = [
  "tauri",
  "tauri-build",
  "tauri-plugin-opener",
  "tauri-plugin-shell",
  "tauri-plugin-fs",
  "tauri-plugin-process",
  "tauri-plugin-notification",
]
