[package]
name = "maze-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
