[package]
name = "maze-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
maze-crypto = { path = "../maze-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
ssh-key = { workspace = true }
signature = "2"
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
